Added UpdateCustomer feature, major refactoring
