# src/Services/Customers/src/Customers.Api/Contracts/Customers/CustomerDetailsResponse.cs
@@ -1,7 +1,0 @@
-﻿namespace Argo.MD.Customers.Api.Contracts.Customers;
-
-public record CustomerDetailsResponse(
-    Guid Id,
-    string FirstName,
-    string LastName,
-    string EmailAddress);
