# src/Services/Customers/src/Customers.Api/Features/Customers/Commands/CreateCustomer/CreateCustomerCommandHandler.cs
@@ -1,27 +1,26 @@
-﻿using Argo.MD.Customers.Api.Persistence;
+﻿using Argo.MD.Customers.Api.Features.Customers.Common;
+using Argo.MD.Customers.Api.Persistence;
 using MediatR;
 
 namespace Argo.MD.Customers.Api.Features.Customers.Commands.CreateCustomer;
 
-public class CreateCustomerCommandHandler : IRequestHandler<CreateCustomerCommand, Guid>
+public class CreateCustomerCommandHandler(CustomerDbContext dbContext)
+    : IRequestHandler<CreateCustomerCommand, CustomerResponse>
 {
-    private readonly CustomerDbContext _dbContext;
-
-    public CreateCustomerCommandHandler(CustomerDbContext dbContext)
-    {
-        _dbContext = dbContext;
-    }
-
-    public async Task<Guid> Handle(CreateCustomerCommand cmd, CancellationToken cancellationToken)
+    public async Task<CustomerResponse> Handle(CreateCustomerCommand cmd, CancellationToken cancellationToken)
     {
         var customer = Domain.CustomerAggregate.Customer.Create(
             cmd.FirstName,
             cmd.LastName,
             cmd.EmailAddress);
 
-        _dbContext.Customers.Add(customer);
-        await _dbContext.SaveChangesAsync(cancellationToken);
+        dbContext.Customers.Add(customer);
+        await dbContext.SaveChangesAsync(cancellationToken);
 
-        return customer.Id;
+        return new CustomerResponse(
+            customer.Id,
+            customer.FirstName,
+            customer.LastName,
+            customer.EmailAddress);
     }
 }
