# src/Services/Customers/src/Customers.Api/Features/Customers/Queries/GetCustomerList/GetCustomerListQueryHandler.cs
@@ -1,22 +1,16 @@
 ﻿using Argo.MD.BuildingBlocks.Core.Mappings;
-using Argo.MD.Customers.Api.Contracts.Customers;
+using Argo.MD.Customers.Api.Features.Customers.Common;
 using Argo.MD.Customers.Api.Persistence;
 using MediatR;
 
 namespace Argo.MD.Customers.Api.Features.Customers.Queries.GetCustomerList;
 
-public class GetCustomerListQueryHandler : IRequestHandler<GetCustomerListQuery, CustomerListResponse>
+public class GetCustomerListQueryHandler(CustomerDbContext dbContext)
+    : IRequestHandler<GetCustomerListQuery, CustomerListResponse>
 {
-    private readonly CustomerDbContext _dbContext;
-
-    public GetCustomerListQueryHandler(CustomerDbContext dbContext)
-    {
-        _dbContext = dbContext;
-    }
-
     public async Task<CustomerListResponse> Handle(GetCustomerListQuery query, CancellationToken cancellationToken)
     {
-        var result = await _dbContext
+        var result = await dbContext
             .Customers
             .Select(c => new CustomerListItem(
                 c.Id,
